testdata/golden/parser/valid/nested_block_comments.fmt
// Parser test: nested block comments are treated as trivia.

fn nested_block_comments() {
    let x = 1;
    /* outer /* inner */ comment */
    let y = 2;
}
