testdata/golden/parser/invalid/range_literal_inclusive_missing_end.fmt
fn test() {
    let a = [..=];
    let b = [1..=];
}
